add google domain head

--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur d'emprunt</title>
     <link rel="stylesheet" href="style/app.css">
+    <meta name="google-site-verification" content="QZZTjZ7JiECinc6QQ8xFZUcYaoJEq_CKhaTTrPxUhNQ" />
 </head>
 <body>
     <h1>Calculateur d'Amortissement d'Emprunt</h1>
